# nhk2023_ilias

./: .gitignore  README.md  install.sh
bezier_path_planning_pursuit/: CMakeLists.txt  README.md  package.xml
bezier_path_planning_pursuit/launch/: bezier_path_planning_pursuit.launch
bezier_path_planning_pursuit/src/: main.cpp  path_planner.cpp  path_planner.h
dummy_system/: CMakeLists.txt  package.xml
dummy_system/launch/: er.launch.py  rr.launch.py
dummy_system/src/: cmdvel2tf.cpp
joy_server/: CMakeLists.txt  package.xml
joy_server/src/: er_joy_server.cpp  joy_server.cpp  rr_joy_server.cpp
local_gui/: CMakeLists.txt  package.xml  plugin.xml  setup.cfg  setup.py
local_gui/local_gui/: local_gui.py
local_gui/resource/: local_gui.ui
local_gui/scripts/: local_gui
local_gui/src/local_gui/: local_gui.py  local_gui_widget.py
nhk2022_simulator/: CMakeLists.txt  README.md  package.xml
nhk2022_simulator/launch/: 4wd_mecanum_simulation_TR.launch  diff_drive_simulation.launch  gmapping.launch  simulation_ER.launch  swerve_simulation_DR.launch  swerve_simulation_R1.launch
nhk2022_simulator/src/: odom_tf_publisher.cpp
nhk2022_simulator/urdf/: _d435.urdf.xacro  diff_robot.urdf.xacro  lidar.urdf.xacro  mecanum_robot.urdf.xacro  omni_body.urdf.xacro  omni_wheel.urdf.xacro  swerve_robot.urdf.xacro  swerve_wheel.urdf.xacro
nhk2022_simulator/worlds/: field_NHK.dae  nhk2023.world  osada_field.world
nhk2023_gui/: CMakeLists.txt  README.md  package.xml
nhk2023_gui/launch/: local_gui.py
nhk2023_gui/src/: local_gui.cpp
nhk2023_launcher/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
nhk2023_launcher/config/: angkorcenter_area_map.yaml  combined_params.yaml  ekf.yaml  side_area_map.yaml
nhk2023_launcher/config/map/: angkorwat_area_map.yaml  combined_params.yaml
nhk2023_launcher/launch/: ER_driver_launch.py  ER_launch.py  ER_lidar_launch.py  LogicSimRR_launch.py  RR.py  RR_driver_launch.py  RR_launch.py  TF_launch.py  ekf_launch.py
nhk2023_launcher/nhk2023_launcher/: static_odom_map_broadcaster.py  static_tf_broadcaster.py
nhk2023_launcher/urdf/: RR.sdf  body.urdf.xacro  mecanum_robot.urdf.xacro  simple_odom_robot.sdf  simple_odom_robot.urdf  swerve_body.urdf.xacro  swerve_wheel.urdf.xacro  wheel.urdf.xacro
nhk2023_simulator/: CMakeLists.txt  README.md  package.xml
nhk2023_simulator/config/: localization.rviz  parameter_bridge.yaml  simulation.rviz
nhk2023_simulator/launch/: 4wd_mecanum_simulation_TR.launch  diff_drive_simulation.launch  gmapping.launch  simulation_ER.launch  simulation_ER.launch.py  simulation_ER.py  simulation_R2.launch  simulation_RR.launch.py  simulation_RR.py  swerve_simulation_DR.launch  swerve_simulation_R1.launch
nhk2023_simulator/launch/worlds/: nhk2023.world
nhk2023_simulator/launch/worlds/models/: diff_robot.urdf.xacro  imu.urdf.xacro  lidar.sdf  lidar.urdf.xacro  simple_odom_robot.sdf  simple_odom_robot.urdf.xacro  swerve_body.urdf.xacro  swerve_robot.sdf  swerve_robot.urdf  swerve_robot.urdf.xacro  swerve_wheel.urdf.xacro
nhk2023_simulator/models/: _d435.gazebo.xacro  lidar.urdf.xacro  omni_robot.urdf.xacro  swerve_body.urdf.xacro  swerve_robot.sdf  swerve_wheel.urdf.xacro
nhk2023_simulator/models/rr/: model.config  model.sdf  rr.sdf  rr.urdf  rr.xacro
nhk2023_simulator/src/: er_odom_publisher.cpp  odom_tf_publisher.cpp
nhk2023_simulator/urdf/: imu.urdf.xacro  simple_odom_robot.urdf.xacro  swerve_robot.urdf.xacro
nhk2023_simulator/worlds/: field_NHK.dae  nhk2022.world  nhk2023.world  osada_field.world
nhk2023_simulator/worlds/field2023/: model.config  model.sdf  model.world
nhk2023_simulator/worlds/models/: imu.sdf  lidar.sdf  lidar_test.sdf  omni_body.urdf.xacro  omni_wheel.urdf.xacro  simple_odom_robot.sdf  swerve_body.urdf.xacro
ping_node/: CMakeLists.txt  package.xml
ping_node/src/: main.cpp
poll_detection/: package.xml  setup.cfg  setup.py
robot_ctrl/: CMakeLists.txt  README.md  package.xml
robot_ctrl/launch/: robot_ctrl.py  robot_ctrl_launch.py
robot_ctrl/src/: joy_commander.cpp  joy_commander.hpp  precision.cpp  robot_ctrl.cpp
robot_ctrl/src/er/: aim.cpp  joy_commander.cpp  pick_up.cpp  precision.cpp  robot_ctrl.cpp
robot_ctrl/src/rr/: joy_commander.cpp  pick_up.cpp  robot_ctrl.cpp
shot_ctrl/: CMakeLists.txt  package.xml
shot_ctrl/include/shot_ctrl/: node.hpp  shooterState.hpp  shot.hpp  shot_state.hpp
shot_ctrl/src/: UpLoader.cpp  afterShot.cpp  downLoader.cpp  init.cpp  loadLoader.cpp  loadMagazine.cpp  loadShuttle.cpp  loading.cpp  magazineDown.cpp  mainShot.cpp  node.cpp  ready.cpp  reloadStep1.cpp  reloadStep2.cpp  shooterState.cpp  shot_ctrl.cpp  start.cpp  upLoader.cpp
simple_gui/: package.xml  setup.cfg  setup.py
simple_gui/simple_gui/: gui.py  simple_gui.py
simple_gui/simple_gui/img/: test  test.dot  test.py
state_ctrl/: CMakeLists.txt  package.xml
state_ctrl/er_state_ctrl/: CMakeLists.txt  package.xml
state_ctrl/er_state_ctrl/src/: idle.cpp  main.cpp  manual.cpp  pickupCourse.cpp  pickupCourse.hpp  pickupLeft.cpp  pickupRight.cpp  preshot.cpp  robot_state_ctrl.cpp  robot_state_ctrl.hpp  shot.cpp  start.cpp  state_ctrl.cpp  state_ctrl.hpp
state_ctrl/rr_state_ctrl/: CMakeLists.txt  package.xml
state_ctrl/rr_state_ctrl/include/tinyfsm/include/: tinyfsm.hpp
state_ctrl/rr_state_ctrl/src/: angkor.cpp  angkor_center.cpp  end.cpp  hill_bottom.cpp  hill_top.cpp  idle.cpp  last_attack.cpp  manual.cpp  pole_block.cpp  restart.cpp  robot_state_ctrl.cpp  robot_state_ctrl.hpp  start.cpp  state_ctrl.hpp  type2_attack.cpp
state_ctrl/src/: idle.cpp  joy.cpp  main.cpp  main.hpp  robot_state_ctrl.cpp  start.cpp  state_ctrl.hpp
