<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>local_gui</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="curious.ks.jp@gmail.com">curious</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend version_gte="0.2.19">python_qt_binding</depend>
  <depend>rclpy</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_py</depend>
  <depend>rqt_py_common</depend>


  <export>
    <rqt_gui plugin="${prefix}/plugin.xml" />
    <build_type>ament_cmake</build_type>
  </export>
</package>
