<?xml version="1.0"?>
<package format="3">
    <name>nhk2023_simulator</name>
    <version>0.0.0</version>
    <description>The nhk2023_simulator package</description>
    <maintainer email="curious.ks.jp@gmail.com">curious</maintainer>
    <license>GPLv3</license>

    <depend>rclcpp</depend>
    <depend>nav_msgs</depend>
    <depend>tf2_ros</depend>

    <export>
        <gazebo_ros gazebo_media_path="${prefix}/worlds" />
        <gazebo_ros gazebo_model_path="${prefix}/models" />
    </export>
</package>
