<?xml version="1.0"?>
<package format="3">
  <name>nhk2023_launcher</name>
  <version>0.0.0</version>
  <description>The nhk2023_launcher package</description>
  <maintainer email="curious.ks.jp@gmail.com">curious</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ros2launch</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
