<?xml version="1.0"?>
<package format="3">
    <name>nhk2023_simulator</name>
    <version>0.0.0</version>
    <description>The nhk2023_simulator package</description>
    <maintainer email="curious.ks.jp@gmail.com">curious</maintainer>
    <license>GPLv3</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>nav_msgs</depend>
    <depend>tf2_ros</depend>

    <exec_depend>ros2launch</exec_depend>

    <!-- <export>
        <gazebo_ros gazebo_media_path="${prefix}/worlds" />
        <gazebo_ros gazebo_model_path="${prefix}/models" />
    </export> -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
