<?xml version="1.0"?>
<package format="3">

  <name>ping_node</name>
  <version>0.0.0</version>
  <description>The package control pings </description>
  <maintainer email="curious.ks.jp@gmail.com">curious</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_lib</depend>
  <depend>rogilink2_interfaces</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
