<?xml version="1.0"?>
<package format="3">

  <name>robot_ctrl</name>
  <version>0.0.0</version>
  <description>The robot_ctrl package</description>
  <maintainer email="curious.ks.jp@gmail.com">curious</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
